<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="BMAppUpdate">应用更新</string>
    <string name="BMBreak_Network">未联网</string>
    <string name="BMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="BMGprsCondition">（提示：非WIFI环境）</string>
    <string name="BMIgnore">忽略该版</string>
    <string name="BMNewVersion">最新版本:</string>
    <string name="BMNotNow">以后再说</string>
    <string name="BMTargetSize">新版本大小:</string>
    <string name="BMToast_IsUpdating">正在更新中....</string>
    <string name="BMUpdateCheck">v3.1.4Beta</string>
    <string name="BMUpdateContent">更新内容</string>
    <string name="BMUpdateNow">立即更新</string>
    <string name="BMUpdateSize">仅需要下载:</string>
    <string name="BMUpdateTitle">发现新版本</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">时时彩</string>
    <string name="award_lottery">开奖</string>
    <string name="back">后退</string>
    <string name="bmob_common_action_cancel">取消</string>
    <string name="bmob_common_action_continue">继续</string>
    <string name="bmob_common_action_info_exist">正在下载中.</string>
    <string name="bmob_common_action_pause">暂停</string>
    <string name="bmob_common_download_failed">下载失败</string>
    <string name="bmob_common_download_finish">下载完成，请点击安装</string>
    <string name="bmob_common_download_notification_prefix">正在下载:</string>
    <string name="bmob_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="bmob_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="bmob_common_patch_finish">更新完成，请点击安装</string>
    <string name="bmob_common_pause_notification_prefix">暂停:</string>
    <string name="bmob_common_silent_download_finish">新版本已经准备好，请点击安装</string>
    <string name="bmob_common_start_download_notification">正在下载应用</string>
    <string name="bmob_common_start_patch_notification">正在更新安装包</string>
    <string name="btn_logon">快速登录</string>
    <string name="cancel">取消</string>
    <string name="category_lottery">分类</string>
    <string name="clean_chche">清除缓存</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="forget_psw1_et_hint">请输入手机号码</string>
    <string name="forget_psw2_et_hint">短信校验码</string>
    <string name="forget_psw3_et1_hint">输入新密码</string>
    <string name="forget_psw3_et2_hint">确认新密码</string>
    <string name="forward">前进</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">首页</string>
    <string name="menu">菜单</string>
    <string name="message">消息</string>
    <string name="name">时时彩</string>
    <string name="news">新闻</string>
    <string name="next">下一步</string>
    <string name="obtain">获取验证码</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新…</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="refresh">刷新</string>
    <string name="send">发送</string>
    <string name="share">分享</string>
    <string name="sure">确定</string>
    <string name="user_id">USER ID</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
</resources>
