<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingBottom="55.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/popup" android:background="@color/bottom_red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_alignParentBottom="true">
        <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/font1" android:layout_width="90.0dip" android:layout_height="45.0dip" android:text="@string/share" />
        <View android:background="@color/white_x" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/font2" android:layout_width="90.0dip" android:layout_height="45.0dip" android:text="@string/message" />
        <View android:background="@color/white" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/font3" android:layout_width="90.0dip" android:layout_height="45.0dip" android:text="@string/clean_chche" />
    </LinearLayout>
</RelativeLayout>