<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/title_top" />
    <TextView android:textSize="16.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="方式一：" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
            <TextView android:textSize="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="用户名：" />
            <EditText android:textSize="16.0sp" android:id="@id/find_username" android:layout_width="fill_parent" android:layout_height="40.0dip" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
            <TextView android:textSize="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" 邮  箱 ：" />
            <EditText android:textSize="16.0sp" android:id="@id/find_email" android:layout_width="fill_parent" android:layout_height="40.0dip" android:inputType="textEmailAddress" />
        </LinearLayout>
    </LinearLayout>
    <Button android:textSize="16.0sp" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/find_submit" android:background="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="确认" />
    <TextView android:textSize="16.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="方式二：" />
    <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <EditText android:id="@id/forgetPsw1ET" android:background="@drawable/shape_register" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_marginLeft="12.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="12.0dip" android:hint="@string/forget_psw1_et_hint" android:layout_alignParentLeft="true" android:inputType="phone" />
        <EditText android:id="@id/forgetPsw2ET" android:background="@drawable/shape_register" android:paddingLeft="10.0dip" android:layout_width="150.0dip" android:layout_height="44.0dip" android:layout_marginLeft="12.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="12.0dip" android:hint="@string/forget_psw2_et_hint" android:layout_below="@id/forgetPsw1ET" android:inputType="number" />
        <Button android:id="@id/btn_obtain" android:background="@drawable/resend_btn_selector" android:layout_width="wrap_content" android:layout_height="44.0dip" android:text="@string/obtain" android:layout_toRightOf="@id/forgetPsw2ET" android:layout_alignBaseline="@id/forgetPsw2ET" android:layout_alignBottom="@id/forgetPsw2ET" />
    </RelativeLayout>
    <Button android:textSize="16.0sp" android:layout_gravity="center_horizontal" android:id="@id/button2" android:background="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/next" android:onClick="btnNext" />
</LinearLayout>