<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/title_layout" layout="@layout/title_top" />
    <LinearLayout android:orientation="vertical" android:id="@id/web_ll" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:id="@id/load_pb" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="2.0dip" style="?android:attr/progressBarStyleHorizontal" />
        <WebView android:id="@id/webView1" android:background="@color/white" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <LinearLayout android:id="@id/web_bottom" android:background="@color/bottom_red" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/web_home" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <ImageView android:duplicateParentState="true" android:layout_width="25.0dip" android:layout_height="25.0dip" android:src="@drawable/home_btn" android:contentDescription="@null" />
                <TextView android:textSize="12.0sp" android:textColor="@color/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/home" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/web_back" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <ImageView android:duplicateParentState="true" android:layout_width="25.0dip" android:layout_height="25.0dip" android:src="@drawable/back_btn" android:contentDescription="@null" />
                <TextView android:textSize="12.0sp" android:textColor="@color/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/back" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/web_forward" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <ImageView android:duplicateParentState="true" android:layout_width="25.0dip" android:layout_height="25.0dip" android:src="@drawable/forward_btn" android:contentDescription="@null" />
                <TextView android:textSize="12.0sp" android:textColor="@color/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/forward" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/web_refresh" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                <ImageView android:duplicateParentState="true" android:layout_width="25.0dip" android:layout_height="25.0dip" android:src="@drawable/refresh_btn" android:contentDescription="@null" />
                <TextView android:textSize="12.0sp" android:textColor="@color/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/refresh" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/web_menu" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                <ImageView android:duplicateParentState="true" android:layout_width="25.0dip" android:layout_height="25.0dip" android:src="@drawable/menu_btn" android:contentDescription="@null" />
                <TextView android:textSize="12.0sp" android:textColor="@color/white" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/menu" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/msg_load" android:background="@color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="false" android:indeterminateDrawable="@drawable/progress_small" style="?android:attr/progressBarStyle" />
        <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="正在加载中..." />
    </LinearLayout>
</LinearLayout>